Improve chat UX and provider flow
Squash UI controls, provider capability/model updates, attachments, and async send refinements.